--- a/MicrochartsSample/Views/BarChartPage.xaml
+++ b/MicrochartsSample/Views/BarChartPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:microcharts="clr-namespace:Microcharts.Forms;assembly=Microcharts.Forms" 
+             xmlns:local="clr-namespace:MicrochartsSample" 
              mc:Ignorable="d"
              x:Class="MicrochartsSample.Views.BarChartPage"
              xmlns:vm="clr-namespace:MicrochartsSample.ViewModels"
@@ -13,6 +13,6 @@
         <vm:BarChartViewModel />
     </ContentPage.BindingContext>
     <StackLayout>
-        <microcharts:ChartView Chart="{Binding Chart}"  HeightRequest="300"  Margin="20,0,20,0" />
+        <local:ChartView Chart="{Binding Chart}"  HeightRequest="300"  Margin="20,0,20,0" />
     </StackLayout>
 </ContentPage>
