--- a/MicrochartsSample/Views/DonutChartPage.xaml
+++ b/MicrochartsSample/Views/DonutChartPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:microcharts="clr-namespace:Microcharts.Forms;assembly=Microcharts.Forms" 
+             xmlns:local="clr-namespace:MicrochartsSample" 
              mc:Ignorable="d"
              x:Class="MicrochartsSample.Views.DonutChartPage"
              xmlns:vm="clr-namespace:MicrochartsSample.ViewModels"
@@ -14,7 +14,7 @@
     </ContentPage.BindingContext>
 
     <StackLayout>
-        <microcharts:ChartView Chart="{Binding Chart}" HeightRequest="200"/>
+        <local:ChartView Chart="{Binding Chart}" HeightRequest="200"/>
         <ListView ItemsSource="{Binding DataList}">
             <ListView.ItemTemplate>
                 <DataTemplate>
