--- a/MicrochartsSample/Views/RadialGaugeChartPage.xaml
+++ b/MicrochartsSample/Views/RadialGaugeChartPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:microcharts="clr-namespace:Microcharts.Forms;assembly=Microcharts.Forms" 
+             xmlns:local="clr-namespace:MicrochartsSample" 
              mc:Ignorable="d"
              x:Class="MicrochartsSample.Views.RadialGaugeChartPage"
              xmlns:vm="clr-namespace:MicrochartsSample.ViewModels"
@@ -13,8 +13,8 @@
         <vm:RadialGaugeChartViewModel />
     </ContentPage.BindingContext>
 
-    <microcharts:ChartView Chart="{Binding Chart}" >
+    <local:ChartView Chart="{Binding Chart}" >
 
-    </microcharts:ChartView>
-    
+    </local:ChartView>
+
 </ContentPage>
