--- a/MicrochartsSample/Views/DonutChartPage.xaml
+++ b/MicrochartsSample/Views/DonutChartPage.xaml
@@ -9,6 +9,7 @@
              xmlns:vm="clr-namespace:MicrochartsSample.ViewModels"
              Title="{Binding Title}">
 
+    <!--TODO 依BINDING方式修改-->
     <ContentPage.BindingContext>
         <vm:DonutChartViewModel />
     </ContentPage.BindingContext>
@@ -20,8 +21,9 @@
                 <DataTemplate>
                     <ViewCell>
                         <StackLayout Orientation="Horizontal">
-                            <Label Text="{Binding Label}" Margin="10,0,0,0" VerticalOptions="Center"/>
-                            <Label Text="{Binding ValueLabel}" Margin="0,0,10,0" VerticalOptions="Center" HorizontalOptions="EndAndExpand"/>
+                            <Image Source="{Binding ImageName}" WidthRequest="20" HeightRequest="20" Margin="10,0,0,0"></Image>
+                            <Label Text="{Binding ShopTypeName}" Margin="10,0,0,0" VerticalOptions="Center"/>
+                            <Label Text="{Binding Amount}" Margin="0,0,10,0" VerticalOptions="Center" HorizontalOptions="EndAndExpand"/>
                         </StackLayout>
                     </ViewCell>
                 </DataTemplate>
