--- a/MicrochartsSample/Views/BarChartPage.xaml
+++ b/MicrochartsSample/Views/BarChartPage.xaml
@@ -14,5 +14,19 @@
     </ContentPage.BindingContext>
     <StackLayout>
         <local:ChartView Chart="{Binding Chart}"  HeightRequest="300"  Margin="20,0,20,0" />
+        <ListView ItemsSource="{Binding DataList}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <StackLayout Orientation="Horizontal">
+                            <BoxView BackgroundColor="{Binding ItemColor}" WidthRequest="20" HeightRequest="20" VerticalOptions="Center" Margin="10,0,0,0" ></BoxView>
+                            <Label Text="{Binding ShopName}" Margin="10,0,0,0" VerticalOptions="Center"/>
+                            <Label Text="{Binding ConsumeCount}"  VerticalOptions="Center" HorizontalOptions="EndAndExpand"/>
+                            <Label Text="{Binding CosumeAmount}" Margin="30,0,10,0" VerticalOptions="Center" HorizontalOptions="End"/>
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </StackLayout>
 </ContentPage>
